[project]
name = "expense-tracker-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]>=0.35",
    "fastmcp==2.13.2",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = []  
